{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 330,
  "lineage": "b5d26501-cf9f-ba9a-8fba-815f2f1515f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea98bd5779c864b6",
            "arn": "arn:aws:ec2:eu-west-1:253490790088:elastic-ip/eipalloc-0ea98bd5779c864b6",
            "association_id": "eipassoc-0cda6d3fc1281a730",
            "domain": "vpc",
            "id": "eipalloc-0ea98bd5779c864b6",
            "instance": "i-0fefcd560a4787e6f",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c8e8d323f8928185",
            "private_dns": "ip-172-16-0-181.eu-west-1.compute.internal",
            "private_ip": "172.16.0.181",
            "public_dns": "ec2-52-17-159-10.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.17.159.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web_ec2",
            "aws_security_group.sg_soo_web",
            "aws_subnet.subnet_az1",
            "aws_vpc.soo_vpc",
            "data.aws_ami.soo_ec2_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f0c3baa60262d5b9",
            "arn": "arn:aws:ec2:eu-west-1:253490790088:instance/i-0fefcd560a4787e6f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fefcd560a4787e6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8e8d323f8928185",
            "private_dns": "ip-172-16-0-181.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.181",
            "public_ip": "52.17.159.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ade494d5c2ede245",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030d43031ce4e045e",
            "tags": {
              "Name": "soo_web_ec2"
            },
            "tags_all": {
              "Name": "soo_web_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094926ae96c6ae079"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_soo_web",
            "aws_subnet.subnet_az1",
            "aws_vpc.soo_vpc",
            "data.aws_ami.soo_ec2_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "soo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:internet-gateway/igw-032b13273574d4953",
            "id": "igw-032b13273574d4953",
            "owner_id": "253490790088",
            "tags": {
              "Name": "soo_vpc_igw"
            },
            "tags_all": {
              "Name": "soo_vpc_igw"
            },
            "vpc_id": "vpc-0ae3726b597b46ff8"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "soo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "soo-s3-bucket-net",
                "enabled": true,
                "prefix": "logs-soo-alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:loadbalancer/app/soo-alb-com/b01296cffd16dd86",
            "arn_suffix": "app/soo-alb-com/b01296cffd16dd86",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "soo-alb-com-260050310.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:loadbalancer/app/soo-alb-com/b01296cffd16dd86",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "soo-alb-com",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dec90651ba60f0f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008ac586cafdbd8ee"
              },
              {
                "subnet_id": "subnet-030d43031ce4e045e"
              }
            ],
            "subnets": [
              "subnet-008ac586cafdbd8ee",
              "subnet-030d43031ce4e045e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "soo-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "soo-alb"
            },
            "vpc_id": "vpc-0ae3726b597b46ff8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_s3_bucket.soo_s3_bucket",
            "aws_security_group.sg_soo_alb",
            "aws_subnet.subnet_az1",
            "aws_subnet.subnet_az2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:listener/app/soo-alb-com/b01296cffd16dd86/4bb654bfe78be124",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:listener/app/soo-alb-com/b01296cffd16dd86/4bb654bfe78be124",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:loadbalancer/app/soo-alb-com/b01296cffd16dd86",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.soo_alb",
            "aws_s3_bucket.soo_s3_bucket",
            "aws_security_group.sg_soo_alb",
            "aws_subnet.subnet_az1",
            "aws_subnet.subnet_az2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:listener/app/soo-alb-com/b01296cffd16dd86/60badf380ac3c989",
            "certificate_arn": "arn:aws:acm:eu-west-1:253490790088:certificate/f6225b4d-a83f-44b2-8cd5-5315321d681b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:targetgroup/soo-alb-target-group-com/a629f6f5427b4de3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:listener/app/soo-alb-com/b01296cffd16dd86/60badf380ac3c989",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:loadbalancer/app/soo-alb-com/b01296cffd16dd86",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.soo_alb",
            "aws_lb_target_group.soo_alb_tg",
            "aws_s3_bucket.soo_s3_bucket",
            "aws_security_group.sg_soo_alb",
            "aws_subnet.subnet_az1",
            "aws_subnet.subnet_az2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "soo_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:targetgroup/soo-alb-target-group-com/a629f6f5427b4de3",
            "arn_suffix": "targetgroup/soo-alb-target-group-com/a629f6f5427b4de3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200,301,302",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:targetgroup/soo-alb-target-group-com/a629f6f5427b4de3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:253490790088:loadbalancer/app/soo-alb-com/b01296cffd16dd86"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "soo-alb-target-group-com",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ae3726b597b46ff8"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_target_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:targetgroup/soo-alb-target-group-com/a629f6f5427b4de3-20250319121929229900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:253490790088:targetgroup/soo-alb-target-group-com/a629f6f5427b4de3",
            "target_id": "i-0fefcd560a4787e6f"
          },
          "dependencies": [
            "aws_instance.web_ec2",
            "aws_lb_target_group.soo_alb_tg",
            "aws_security_group.sg_soo_web",
            "aws_subnet.subnet_az1",
            "aws_vpc.soo_vpc",
            "data.aws_ami.soo_ec2_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "soo_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:route-table/rtb-02f88c9b45295ca08",
            "id": "rtb-02f88c9b45295ca08",
            "owner_id": "253490790088",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032b13273574d4953",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "soo_rt"
            },
            "tags_all": {
              "Name": "soo_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3726b597b46ff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.soo_igw",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2f7e3e9ed204b16",
            "route_table_id": "rtb-02f88c9b45295ca08",
            "subnet_id": "subnet-030d43031ce4e045e"
          },
          "dependencies": [
            "aws_internet_gateway.soo_igw",
            "aws_route_table.soo_rt",
            "aws_subnet.subnet_az1",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e7de7fbf4a0e6d4",
            "route_table_id": "rtb-02f88c9b45295ca08",
            "subnet_id": "subnet-008ac586cafdbd8ee"
          },
          "dependencies": [
            "aws_internet_gateway.soo_igw",
            "aws_route_table.soo_rt",
            "aws_subnet.subnet_az2",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_soo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group/sg-0dec90651ba60f0f0",
            "description": "As Load Balancer, receiving HTTP/HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dec90651ba60f0f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_soo_alb",
            "name_prefix": "",
            "owner_id": "253490790088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_soo_alb"
            },
            "tags_all": {
              "Name": "sg_soo_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3726b597b46ff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_soo_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group/sg-094926ae96c6ae079",
            "description": "As Web Server, Receiving HTTP/HTTPS/SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094926ae96c6ae079",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dec90651ba60f0f0"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dec90651ba60f0f0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_soo_web",
            "name_prefix": "",
            "owner_id": "253490790088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_soo_web"
            },
            "tags_all": {
              "Name": "sg_soo_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3726b597b46ff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:subnet/subnet-030d43031ce4e045e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030d43031ce4e045e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490790088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soo_subnet_az1"
            },
            "tags_all": {
              "Name": "soo_subnet_az1"
            },
            "vpc_id": "vpc-0ae3726b597b46ff8"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:subnet/subnet-008ac586cafdbd8ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008ac586cafdbd8ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490790088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soo_subnet_az2"
            },
            "tags_all": {
              "Name": "soo_subnet_az2"
            },
            "vpc_id": "vpc-0ae3726b597b46ff8"
          },
          "dependencies": [
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "soo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:vpc/vpc-0ae3726b597b46ff8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/20",
            "default_network_acl_id": "acl-09c73ebcfe3376c89",
            "default_route_table_id": "rtb-0c6891d635b9b8d31",
            "default_security_group_id": "sg-018b94eeee2273261",
            "dhcp_options_id": "dopt-0c3843e9180d747c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae3726b597b46ff8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6891d635b9b8d31",
            "owner_id": "253490790088",
            "tags": {
              "Name": "soo_vpc"
            },
            "tags_all": {
              "Name": "soo_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_out_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-0cc4954da7ac280a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cc4954da7ac280a2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dec90651ba60f0f0",
            "security_group_rule_id": "sgr-0cc4954da7ac280a2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_alb",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web_out_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-09f5f4812802d7dd4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09f5f4812802d7dd4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-094926ae96c6ae079",
            "security_group_rule_id": "sgr-09f5f4812802d7dd4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_web",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-0f8e2b746dbab8e0a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f8e2b746dbab8e0a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dec90651ba60f0f0",
            "security_group_rule_id": "sgr-0f8e2b746dbab8e0a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_alb",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-0d1a3fab63d3c234d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0d1a3fab63d3c234d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dec90651ba60f0f0",
            "security_group_rule_id": "sgr-0d1a3fab63d3c234d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_alb",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_in_flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-0a252af082e2d0cc5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5000,
            "id": "sgr-0a252af082e2d0cc5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-094926ae96c6ae079",
            "security_group_rule_id": "sgr-0a252af082e2d0cc5",
            "tags": null,
            "tags_all": {},
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_web",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-0b7d7eb2027e2549b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b7d7eb2027e2549b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0dec90651ba60f0f0",
            "security_group_id": "sg-094926ae96c6ae079",
            "security_group_rule_id": "sgr-0b7d7eb2027e2549b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_alb",
            "aws_security_group.sg_soo_web",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-013d629c023ca30f3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-013d629c023ca30f3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0dec90651ba60f0f0",
            "security_group_id": "sg-094926ae96c6ae079",
            "security_group_rule_id": "sgr-013d629c023ca30f3",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_alb",
            "aws_security_group.sg_soo_web",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_in_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-0a758bbbe46784d4f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0a758bbbe46784d4f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-094926ae96c6ae079",
            "security_group_rule_id": "sgr-0a758bbbe46784d4f",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_web",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:253490790088:security-group-rule/sgr-031176ac6dbe58751",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-031176ac6dbe58751",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-094926ae96c6ae079",
            "security_group_rule_id": "sgr-031176ac6dbe58751",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_soo_web",
            "aws_vpc.soo_vpc"
          ]
        }
      ]
    }
  ]
}